@@ -1,3 +1,7 @@
+2005-02-25  Herbert Xu <herbert@gondor.apana.org.au>
+
+	* Changed boolean rootshell into shlvl counter.
+
 2005-01-31  Gerrit Pape <pape@smarden.org>
 
 	* Release 0.5.2.
